opening recipe modal now works

--- a/views/layouts/mealPlan.handlebars
+++ b/views/layouts/mealPlan.handlebars
@@ -20,15 +20,16 @@
     <link rel="stylesheet" href="./assets/css/tabs.css"/>
     <link rel="stylesheet" href="./assets/css/buttons.css"/>
     <link rel="stylesheet" href="./assets/css/nav.css"/>
-    <link rel="stylesheet" href="./assets/css/dashboard/main.css"/>
-    <link rel="stylesheet" href="./assets/css/dashboard/mobile.css"/>
-    <link rel="stylesheet" href="./assets/css/dashboard/desktop.css"/>
     <link rel="stylesheet" href="./assets/css/styleHelpers.css"/>
     <link rel="stylesheet" href="./assets/css/modal.css">
     <link rel="stylesheet" href="./assets/css/recipe-modal/visual-info.css">
     <link rel="stylesheet" href="./assets/css/recipe-modal/recipe.css">
     <link rel="stylesheet" href="./assets/css/shopping-list.css">
     <link rel="stylesheet" href="./assets/css/create-recipe.css"/>
+    <link rel="stylesheet" href="./assets/css/dashboard/main.css"/>
+    <link rel="stylesheet" href="./assets/css/dashboard/mobile.css"/>
+    <link rel="stylesheet" href="./assets/css/dashboard/desktop.css"/>
+    
 
 </head>
 <body>
@@ -54,6 +55,9 @@
             {{{body}}}
         </div>
     </main>
+
+    <!-- modal goes here -->
+    <div id="modal-goes-here"></div>
 
      <footer class="footer">
 
