--- a/Public/assets/css/dashboard/desktop.css
+++ b/Public/assets/css/dashboard/desktop.css
@@ -36,7 +36,7 @@
         text-align: center;
     }
 
-    .lunch {
+    .Lunch {
         flex-direction: row-reverse;
     }
 /* ------------------------ recipe-card ------------------------ */
