--- a/views/layouts/mealPlan.handlebars
+++ b/views/layouts/mealPlan.handlebars
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Plan</title>
+     <!-- Favicon -->
+    <link rel="shortcut icon" href="./assets/images/favicons/red-chilli-vector.png" >
+    <link rel="apple-touch-icon" href="./assets/images/favicons/red-chilli-vector.png">
+    <link rel="icon" href="./assets/images/favicons/red-chilli-vector.png">
     <!-- font-awesome CDN -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs="crossorigin="anonymous"
