--- a/views/layouts/mealPlan.handlebars
+++ b/views/layouts/mealPlan.handlebars
@@ -99,6 +99,7 @@
     <script src="./assets/javascript/getDropdownValues.js"></script>
     <script src="./assets/javascript/removeElement.js"></script>
     <script src="./assets/javascript/removeInitialChips.js"></script>
+    <script src="./assets/javascript/noScroll.js"></script>
 
     {{!-- create recipe js --}}
     <script src="./assets/javascript/create-recipe-form/addIngredient.js"></script>
