re-ordered templates folder to accomidate templates for all modals

--- a/views/layouts/mealPlan.handlebars
+++ b/views/layouts/mealPlan.handlebars
@@ -112,12 +112,16 @@
     <script src="./assets/javascript/create-recipe-form/publishRecipe.js"></script>
     <script src="./assets/javascript/create-recipe-form/index.js"></script>
 
+    {{!-- modal - templates --}}
+        {{!-- recipeModal --}}
+        <script src="./assets/javascript/modal-logic/templates/recipeModal/templateMethod.js"></script>
+        <script src="./assets/javascript/modal-logic/templates/recipeModal/templateIngredients.js"></script>
+        <script src="./assets/javascript/modal-logic/templates/recipeModal/templateHead.js"></script>
+        <script src="./assets/javascript/modal-logic/templates/recipeModal/templateDietTags.js"></script>
+        <script src="./assets/javascript/modal-logic/templates/recipeModal/constructModal.js"></script>
+        {{!-- create-recipe-modal --}}
+        <script src="./assets/javascript/modal-logic/templates/createRecipeForm/buildRecipeForm.js"></script>
     {{!-- modal-logic js --}}
-    <script src="./assets/javascript/modal-logic/templates/templateMethod.js"></script>
-    <script src="./assets/javascript/modal-logic/templates/templateIngredients.js"></script>
-    <script src="./assets/javascript/modal-logic/templates/templateHead.js"></script>
-    <script src="./assets/javascript/modal-logic/templates/templateDietTags.js"></script>
-    <script src="./assets/javascript/modal-logic/templates/constructModal.js"></script>
     <script src="./assets/javascript/modal-logic/renderTimeBar.js"></script>
     <script src="./assets/javascript/modal-logic/shopping-list-logic.js"></script>
     <script src="./assets/javascript/modal-logic/openModal.js"></script>
