--- a/views/layouts/mealPlan.handlebars
+++ b/views/layouts/mealPlan.handlebars
@@ -91,6 +91,8 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- materialize js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- AWS -->
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.688.0.min.js"></script>
 
     <!-- custom js -->
     {{!-- general js --}}
@@ -120,6 +122,8 @@
 
 
     {{!-- create recipe js --}}
+    <script src="./assets/javascript/create-recipe-form/getSignedUrls.js"></script>
+    <script src="./assets/javascript/create-recipe-form/uploadImage.js"></script>
     <script src="./assets/javascript/create-recipe-form/addIngredient.js"></script>
     <script src="./assets/javascript/create-recipe-form/addStep.js"></script>
     <script src="./assets/javascript/create-recipe-form/createDeleteBtn.js"></script>
