--- a/Public/assets/css/nav.css
+++ b/Public/assets/css/nav.css
@@ -7,12 +7,20 @@ nav {
     background-color: #bca990;
 }
 
-nav>h3 {
+nav>h3, .logo {
     font-family: 'Playball', cursive;
     padding:10px 5%;
     margin: 0;
     position: absolute;
     color: #ce1823;
+}
+
+.logo {
+    margin-top:-30px;
+}
+
+.logo:hover {
+    cursor: pointer;
 }
 
 .divider {
