--- a/Public/assets/css/styleHelpers.css
+++ b/Public/assets/css/styleHelpers.css
@@ -1,4 +1,4 @@
-.Valign-start, .Valign-center, .Valign-between, .Valign-around {
+.Valign-start, .Valign-center, .Valign-between, .Valign-around , .end{
     display:flex;
     align-items: center;
 }
@@ -19,6 +19,7 @@
     justify-content: space-around;
 }
 .end {
+    align-self: flex-end;
     justify-self: flex-end;
 }
 
