--- a/views/layouts/mealPlan.handlebars
+++ b/views/layouts/mealPlan.handlebars
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Search and create recipes with the world. Generate an supermarket isle shopping list and meal plan for the week.">
+    <meta name="keywords" content="Recipe, mealplan, plan, shopping, list, shopping-list">
     <title>Meal Plan</title>
      <!-- Favicon -->
     <link rel="shortcut icon" href="./assets/images/favicons/red-chilli-vector.png" >
