converted css to minified css

--- a/views/layouts/mealPlan.handlebars
+++ b/views/layouts/mealPlan.handlebars
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
     <!--  MDC icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <!-- custom css -->
-    <link rel="stylesheet" href="./assets/css/tabs.css"/>
+    <!-- developing custom css -->
+    {{!-- <link rel="stylesheet" href="./assets/css/tabs.css"/>
     <link rel="stylesheet" href="./assets/css/buttons.css"/>
     <link rel="stylesheet" href="./assets/css/nav.css"/>
     <link rel="stylesheet" href="./assets/css/styleHelpers.css"/>
@@ -30,9 +30,9 @@
     <link rel="stylesheet" href="./assets/css/create-recipe.css"/>
     <link rel="stylesheet" href="./assets/css/dashboard/main.css"/>
     <link rel="stylesheet" href="./assets/css/dashboard/mobile.css"/>
-    <link rel="stylesheet" href="./assets/css/dashboard/desktop.css"/>
-    
-
+    <link rel="stylesheet" href="./assets/css/dashboard/desktop.css"/> --}}
+    <!-- minified js -->
+    <link rel="stylesheet" href="./assets/css/compressed/dashboard.min.css">
 </head>
 <body>
      <!-- NavBar -->
